# advent

./: Cargo.toml  Makefile  README.md
2015/: Cargo.toml  Makefile
2015/advtools/: Cargo.toml  lib.rs
2015/advtools/src/: lib.rs
2015/benches/: days.rs
2015/day01/: Cargo.toml  main.rs
2015/day02/: Cargo.toml
2015/day03/: Cargo.toml
2015/day04/: Cargo.toml
2015/day04/src/: main.rs
2015/day05/: Cargo.toml
2015/day05/src/: main.rs
2015/day06/src/: main.rs
2015/day07/: Cargo.toml
2015/day07/src/: main.rs
2015/day08/: Cargo.toml  main.rs
2015/day08/src/: main.rs
2015/day09/: Cargo.toml
2015/day09/src/: main.rs
2015/day1/: Cargo.toml
2015/day1/src/: main.rs
2015/day10/: Cargo.toml
2015/day10/src/: main.rs
2015/day11/: Cargo.toml
2015/day11/src/: main.rs
2015/day12/: Cargo.toml
2015/day12/src/: main.rs
2015/day13/: Cargo.toml
2015/day13/src/: main.rs
2015/day14/: Cargo.toml  main.rs
2015/day14/src/: main.rs
2015/day15/: Cargo.toml
2015/day15/src/: main.rs
2015/day16/: Cargo.toml
2015/day16/src/: main.rs
2015/day17/: Cargo.toml
2015/day17/src/: main.rs
2015/day18/: Cargo.toml  main.rs
2015/day18/src/: main.rs
2015/day19/: Cargo.toml
2015/day2/: Cargo.toml
2015/day2/src/: main.rs
2015/day20/: Cargo.toml
2015/day20/src/: main.rs
2015/day21/: Cargo.toml
2015/day21/src/: main.rs
2015/day22/: Cargo.toml
2015/day22/src/: main.rs
2015/day23/: Cargo.toml
2015/day23/src/: main.rs
2015/day24/: Cargo.toml
2015/day24/src/: main.rs
2015/day25/: Cargo.toml
2015/day25/src/: main.rs
2015/day3/: Cargo.toml
2015/day3/src/: main.rs
2015/day4/: Cargo.toml
2015/day4/src/: main.rs
2015/day5/: Cargo.toml
2015/day5/src/: main.rs
2015/day6/: Cargo.toml
2015/day6/src/: main.rs
2015/day7/: Cargo.toml
2015/day7/src/: main.rs
2015/day8/: Cargo.toml
2015/day8/src/: main.rs
2015/day9/: Cargo.toml
2015/day9/src/: main.rs
2016/: Cargo.toml  Makefile  README.md
2016/advtools/: Cargo.toml  lib.rs
2016/advtools/src/: lib.rs
2016/day01/: main.rs
2016/day02/: Cargo.toml  main.rs
2016/day02/src/: main.rs
2016/day03/: Cargo.toml
2016/day04/: Cargo.toml  main.rs
2016/day04/src/: main.rs
2016/day05/: Cargo.toml  main.rs
2016/day05/src/: main.rs
2016/day06/: Cargo.toml
2016/day06/src/: main.rs
2016/day07/: Cargo.toml
2016/day07/src/: main.rs
2016/day08/: Cargo.toml
2016/day08/src/: main.rs
2016/day09/: Cargo.toml  main.rs
2016/day10/: main.rs
2016/day10/src/: main.rs
2016/day11/: Cargo.toml  main.rs
2016/day11/src/: main.rs
2016/day12/: Cargo.toml  main.rs
2016/day13/: Cargo.toml
2016/day13/src/: main.rs
2016/day14/: Cargo.toml  main.rs
2016/day14/src/: main.rs
2016/day15/: Cargo.toml
2016/day16/: Cargo.toml  main.rs
2016/day17/: Cargo.toml  main.rs
2016/day18/: Cargo.toml  main.rs
2016/day19/: Cargo.toml  main.rs
2016/day20/: Cargo.toml
2016/day21/: Cargo.toml  main.rs
2016/day22/: Cargo.toml  main.rs
2016/day23/: Cargo.toml  main.rs
2016/day24/: Cargo.toml  main.rs
2016/src/: lib.rs
2017/: Cargo.toml  README.md
2017/advtools/: Cargo.toml  lib.rs
2017/input/: day15.txt
2017/src/: lib.rs
2018/: Cargo.toml  Makefile
2019/: Cargo.toml  README.md
2019/benches/: days.rs
2019/input/: 2019_day01.txt  day15.txt
2019/src/: lib.rs
2020/: Cargo.toml  Makefile
2021/: Cargo.toml  README.md
2021/benches/: days.rs
2022/: Cargo.toml  README.md
2023/: Cargo.toml
2023/input/: 2023_day04.txt  2023_day17.txt  2023_day18.txt  2023_day19.txt  2023_day21.txt  2023_day25.txt
2024/: Cargo.toml
2024/input/: 2024_day06.txt  2024_day07.txt  2024_day15.txt  2024_day21.txt
advtools/: Cargo.toml
advtools/src/: grid.rs  input.rs  lib.rs  vecs.rs
