[workspace]
members = [
    "2015",
    "2016",
    "2017",
    "2018",
    "2019",
    "2020",
    "2021",
    "2022",
]

[workspace.package]
description = "Solutions for Advent of Code."
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]
edition = "2021"

[workspace.dependencies]
advtools = { version = "0.9.0", path = "advtools" }

[profile.lto]
inherits = "release"
lto = "thin"
