[package]
name = "advent15"
description = "Solutions for Advent of Code 2015."
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]
edition = "2021"

[[bench]]
name = "days"
harness = false

[dependencies]
advtools = { version = "0.8.0", path = "../advtools" }
rand = "0.8.4"
itoa = "0.4.6"
md-5 = "0.9.1"
serde_json = "1.0.59"

[dev-dependencies]
criterion = { version = "0.3.3", default-features = false }
