[package]
name = "advent-2015"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bench]]
name = "days"
harness = false

[dependencies]
advtools.workspace = true
rand = "0.8.4"
itoa = "0.4.6"
md-5 = "0.9.1"
serde_json = "1.0.59"

[dev-dependencies]
criterion = { version = "0.3.3", default-features = false }
