[package]
name = "advent-2015"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
advtools.workspace = true
rand = "0.9.0"
itoa = "1.0"
md-5 = "0.10.6"
serde_json = "1.0.59"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
