[package]
name = "advent-2016"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bench]]
name = "days"
harness = false

[dependencies]
advtools.workspace = true
md-5 = "0.9.1"
itoa = "0.4.6"

[dev-dependencies]
criterion = { version = "0.3.3", default-features = false }
