[package]
name = "advent17"
description = "Solutions for Advent of Code 2017."
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]
edition = "2018"

[[bench]]
name = "days"
harness = false

[dependencies]
advtools = { version = "0.5.0", path = "../advtools" }
petgraph = "0.5"

[dev-dependencies]
criterion = { version = "0.3.0", default-features = false }
