[package]
name = "advent17"
description = "Solutions for Advent of Code 2017."
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]
edition = "2021"

[[bench]]
name = "days"
harness = false

[dependencies]
advtools = { version = "0.9.0", path = "../advtools" }

[dev-dependencies]
criterion = { version = "0.3.3", default-features = false }
