[package]
name = "advent-2018"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bench]]
name = "days"
harness = false

[dependencies]
advtools.workspace = true
strum = "0.21.0"
strum_macros = "0.21.1"
priority-queue = "1.0.3"

[dev-dependencies]
criterion = { version = "0.3.3", default-features = false }
