[package]
name = "advent-2018"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
advtools.workspace = true
strum = "0.27.1"
strum_macros = "0.27.1"
priority-queue = "2.1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
