[package]
name = "advent-2019"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bench]]
name = "days"
harness = false

[dependencies]
advtools.workspace = true
num = "0.4.0"
rand = "0.8.4"
float-ord = "0.3.2"
num_enum = "0.5.4"
bit = "0.1.1"

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }
