[package]
name = "advent-2019"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
advtools.workspace = true
rand = "0.8.4"
float-ord = "0.3.2"
num_enum = "0.7.3"
bit = "0.1.1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
