[package]
name = "advent21"
description = "Solutions for Advent of Code 2021."
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]
edition = "2021"

[[bench]]
name = "days"
harness = false

[dependencies]
advtools = { version = "0.8.0", path = "../advtools" }
odds = { version = "0.4.0", features = ["std-string", "std-vec"] }
num = "0.4.0"

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }
