[package]
name = "advent-2021"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bench]]
name = "days"
harness = false

[dependencies]
advtools.workspace = true
odds = { version = "0.4.0", features = ["std-string", "std-vec"] }
num = "0.4.0"

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }
