[package]
name = "advent-2021"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
advtools.workspace = true
odds = { version = "0.4.0", features = ["std-string", "std-vec"] }

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }
