[package]
name = "advent22"
description = "Solutions for Advent of Code 2022."
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]
edition = "2021"

[[bench]]
name = "days"
harness = false

[dependencies]
advtools = { version = "0.9.0", path = "../advtools" }
odds = { version = "0.4.0", features = ["std-string", "std-vec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
cgmath = "0.18"

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }
