[package]
name = "advent-2022"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
advtools.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cgmath = "0.18"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
